<resources>
    <string name="app_name">AniPhonics App</string>
    <string name="start_button">Start</string>
    <string name="vol_enable_button">Volume Enable</string>
    <string name="bg_names">BGnames</string>
    <string name="bg_sounds">BGsounds</string>
    <string name="bg_games">BGgames</string>
    <string name="back_button">Back</string>
    <string name="pig">Pig</string>
    <string name="horse">Horse</string>
    <string name="cow">Cow</string>
    <string name="hen">Hen</string>
    <string name="rooster">Rooster</string>
    <string name="goat">Goat</string>
    <string name="sheep">Sheep</string>
    <string name="duck">Duck</string>
    <string name="turkey">Turkey</string>
    <string name="fish">Fish</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="bird">Bird</string>
    <string name="parrot">Parrot</string>
    <string name="mouse">Mouse</string>
    <string name="hamster">Hamster</string>
    <string name="squirrel">Squirrel</string>
    <string name="rabbit">Rabbit</string>
    <string name="turtle">Turtle</string>
    <string name="elephant">Elephant</string>
    <string name="lion">Lion</string>
    <string name="tiger">Tiger</string>
    <string name="snake">Snake</string>
    <string name="wolf">Wolf</string>
    <string name="monkey">Monkey</string>
    <string name="giraffe">Giraffe</string>
    <string name="kangaroo">Kangaroo</string>
    <string name="hippo">Hippo</string>
    <string name="zebra">Zebra</string>
    <string name="bear">Bear</string>
    <string name="panda">Panda</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="frog">Frog</string>
    <string name="memorize">Memorize</string>
    <string name="puzzle">Puzzle</string>
    <string name="matching">Matching</string>
    <string name="flip_card">Card</string>
    <string name="greenBT">Green</string>
    <string name="redBT">Red</string>
    <string name="ListView">List</string>
    <string name="puzzlelayout">puzzle</string>
    <string name="puzzledone">puzzle</string>
    <string name="homebutton">home</string>
    <string name="uri_more_app">uri</string>
    <string name="uri_app_link">link</string>
    <string name="uri_app_rate">rate</string>
    <string name="loading">Loading</string>
</resources>