<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_2nd"
    tools:context=".StartActivity">

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="160dp"
      android:layout_centerHorizontal="true"
      android:contentDescription="@string/app_name"
      app:srcCompat="@drawable/title"
      tools:layout_editor_absoluteX="0dp"
      tools:layout_editor_absoluteY="164dp" />

  <Button
      android:id="@+id/Start"
      android:layout_width="120dp"
      android:layout_height="60dp"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="450dp"
      android:background="@drawable/button_bg"
      android:contentDescription="@string/start_button" />

  <Button
      android:id="@+id/Volume"
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:layout_margin="10dp"
      android:background="@drawable/vol_enable"
      android:contentDescription="@string/vol_enable_button" />

</RelativeLayout>