<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pet_bg_main"
    tools:context=".PetActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/Back"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/arrow"
            android:contentDescription="@string/back_button" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            app:srcCompat="@drawable/pet_name_tag" />

        <ImageButton
            android:id="@+id/Dog"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="600dp"
            android:background="@drawable/dog"
            android:contentDescription="@string/dog" />

        <ImageButton
            android:id="@+id/Cat"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="420dp"
            android:background="@drawable/cat"
            android:contentDescription="@string/cat" />

        <ImageButton
            android:id="@+id/Bird"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="210dp"
            android:background="@drawable/bird"
            android:contentDescription="@string/bird" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="250dp"
            app:srcCompat="@drawable/branch" />

        <ImageButton
            android:id="@+id/Parrot"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="210dp"
            android:background="@drawable/parrot"
            android:contentDescription="@string/parrot" />

        <ImageButton
            android:id="@+id/Mouse"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="400dp"
            android:background="@drawable/mouse"
            android:contentDescription="@string/mouse" />

        <ImageButton
            android:id="@+id/Frog"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="520dp"
            android:background="@drawable/frog"
            android:contentDescription="@string/frog" />

        <ImageButton
            android:id="@+id/Hamster"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="410dp"
            android:background="@drawable/hamster"
            android:contentDescription="@string/hamster" />

        <ImageButton
            android:id="@+id/Squirrel"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="490dp"
            android:background="@drawable/squirrel"
            android:contentDescription="@string/squirrel" />

        <ImageButton
            android:id="@+id/Rabbit"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="270dp"
            android:layout_marginTop="530dp"
            android:background="@drawable/rabbit"
            android:contentDescription="@string/rabbit" />

        <ImageButton
            android:id="@+id/Turtle"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="640dp"
            android:background="@drawable/turtle"
            android:contentDescription="@string/turtle" />

        <ImageView
            android:id="@+id/DogText"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginTop="705dp"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/dog_text" />

        <ImageView
            android:id="@+id/CatText"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginTop="510dp"
            android:layout_marginStart="280dp"
            app:srcCompat="@drawable/cat_text" />

        <ImageView
            android:id="@+id/TurtleText"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginTop="720dp"
            android:layout_marginStart="180dp"
            app:srcCompat="@drawable/turtle_text" />

        <ImageView
            android:id="@+id/RabbitText"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginTop="615dp"
            android:layout_marginStart="260dp"
            app:srcCompat="@drawable/rabbit_text" />

        <ImageView
            android:id="@+id/SquirrelText"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginTop="555dp"
            android:layout_marginStart="60dp"
            app:srcCompat="@drawable/squirrel_text" />

        <ImageView
            android:id="@+id/FrogText"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginTop="580dp"
            android:layout_marginStart="160dp"
            app:srcCompat="@drawable/frog_text" />

        <ImageView
            android:id="@+id/MouseText"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginTop="380dp"
            android:layout_marginStart="50dp"
            app:srcCompat="@drawable/mouse_text" />

        <ImageView
            android:id="@+id/HamsterText"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginTop="475dp"
            android:layout_marginStart="150dp"
            app:srcCompat="@drawable/hamster_text" />

        <ImageView
            android:id="@+id/ParrotText"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginTop="290dp"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/parrot_text" />

        <ImageView
            android:id="@+id/BirdText"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginTop="265dp"
            android:layout_marginStart="240dp"
            app:srcCompat="@drawable/bird_text" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>